2005-03-09  Marcus Crestani  <crestani@informatik.uni-tuebingen.de>

	* database.c (berkdb_map): Add typecasts.

2005-03-01  Marcus Crestani  <crestani@informatik.uni-tuebingen.de>

	* alloc.c: Add functionality for backtracing the KKCC mark
	algorithm.
	* alloc.c (kkcc_backtrace): New.
	* alloc.c (kkcc_bt_push): New.
	* alloc.c (kkcc_gc_stack_push):
	* alloc.c (kkcc_gc_stack_push_lisp_object):
	* alloc.c (mark_object_maybe_checking_free):
	* alloc.c (mark_struct_contents):
	* alloc.c (kkcc_marking):
	* alloc.c (mark_object):
	* data.c (finish_marking_weak_lists):
	* data.c (continue_marking_ephemerons):
	* data.c (finish_marking_ephemerons):
	* elhash.c (MARK_OBJ):
	* lisp.h:
	* profile.c (mark_profiling_info_maphash): Add level (current
	depth of mark tree) and pos (position within description) as
	additional arguments to KKCC mark functions.

2004-10-25  Mike Alexander  <mta@arbortext.com>

	* Makefile.in.in (obj_src): Fix a typo in the PDUMP section

2005-03-02  Marcus Crestani  <crestani@informatik.uni-tuebingen.de>

	* redisplay.h (struct rune): make type field an int, to fix
        KKCC marking of unions.

2005-01-13  Stephen J. Turnbull  <stephen@xemacs.org>

	* regex.c (re_match_2_internal): 
	* regex.h (struct re_pattern_buffer):
	Improve comments.  Add a DEBUG_PRINT2 for null matches.

2005-03-02  Aidan Kehoe  <kehoea@parhasard.net>

	* select-x.c (x_reply_selection_request): Check that
	XtWindowToWidget returns NULL before calling XtRegisterDrawable,
	document why. 

2005-03-02  Aidan Kehoe  <kehoea@parhasard.net>

	* select-x.c (x_reply_selection_request): Make the error message
	in the absence of HAVE_XTREGISTERDRAWABLE more polite, pass a
	second argument to invalid_operation to have it actually compile
	in that case. 

2005-03-01  Aidan Kehoe  <kehoea@parhasard.net>

	* config.h.in: New macro, HAVE_XTREGISTERDRAWABLE. 
	* select-x.c (x_reply_selection_request): Use it. 

2005-03-01  Aidan Kehoe  <kehoea@parhasard.net>
